# tinygent

./: 404.html  CLAUDE.md  README.md  TODO.md  black.toml  index.html  mkdocs.yml  mypy.ini  mypy.inisdaf  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: checks.yml  deploy-docs.yml  mypy.yml  publish-pypi.yml  ruff.yml
api-reference/: index.html
concepts/agents/: index.html
concepts/llms/: index.html
concepts/memory/: index.html
concepts/middleware/: index.html
concepts/tools/: index.html
docs/: api-reference.md  examples.md  getting-started.md  index.md
docs/concepts/: agents.md  llms.md  memory.md  middleware.md  tools.md
docs/guides/: building-agents.md  custom-tools.md
docs/stylesheets/: extra.css
examples/: index.html
examples/agents/hooks/: README.md  main.py
examples/agents/map/: README.md  agent.yaml  main.py  quick.py
examples/agents/middleware/: README.md  llm_tool_selector_example.py  main.py  tool_limiter_example.py  vector_tool_selector_example.py
examples/agents/multi-step/: README.md  agent.yaml  main.py  prompts.yaml  quick.py
examples/agents/react/: README.md  agent.yaml  main.py  prompts.yaml  quick.py  react_agent.yaml
examples/agents/squad/: README.md  agent.yaml  main.py  quick.py
examples/chat-app/: main.py
examples/config-yaml/: agent.yaml
examples/cross-encoder/: README.md  main.py
examples/embeddings/: main.py
examples/function-calling/: README.md  main.py
examples/function_call/: main.py
examples/function_calling/: README.md  main.py  main_2.py
examples/hooks/: README.md
examples/knowledge-graph/: main.py
examples/llm-usage/: README.md  main.py
examples/memory/: base_memory.py
examples/memory/basic-chat-memory/: README.md  main.py
examples/memory/buffer-summary-memory/: README.md  main.py
examples/memory/buffer-window-chat-memory/: README.md  main.py
examples/memory/combined-memory/: README.md  main.py
examples/terminal/: README.md
examples/terminal/multi_step/: README.md  config.yaml
examples/tool-usage/: README.md  main.py
examples/tool_usage/: README.md  main.py
examples/tool_usage_example/: README.md  main.py
examples/tracing/: README.md  main.py
getting-started/: index.html
guides/building-agents/: index.html
guides/custom-tools/: index.html
scripts/: fmt.py  lint.py
search/: search_index.json
seznam/: pyproject.toml
seznam/seznam/: __main__.py
seznam/seznam/prompts/: agent-prompt.yaml
seznam/seznam/services/: toolhub.py
seznam/seznam/tools/: __init__.py  nakupni.py  news.py
tinygent/: logger.py  logging.py  settings.py  types.py
tinygent/agents/: __init__.py  base_agent.py  map_agent.py  multi_step_agent.py  react_agent.py  register.py  squad_agent.py
tinygent/agents/checkpointer/: base_checkpointer.py  default_checkpointer.py  local_checkpointer.py  register.py
tinygent/agents/middleware/: README.md  __init__.py  agent.py  base.py  base_tool_selector.py  hooks.py  llm_tool_selector.py  register.py  tool_limiter.py  vector_tool_selector.py
tinygent/agents/prompts/: map.py  multi.py
tinygent/cli/: builder.py  entry_point.py  utils.py
tinygent/cli/commands/: terminal.py
tinygent/core/: chat_history.py
tinygent/core/datamodels/: agent.py  checkpointer.py  messages.py  tool.py  tool_info.py
tinygent/core/factory/: agent.py  checkpointer.py  llm.py  memory.py  middleware.py  tool.py
tinygent/core/prompts/agents/factory/: map_agent.py  multi_agent.py  react_agent.py  squad_agent.py
tinygent/core/prompts/agents/middleware/factory/: llm_tool_selector.py
tinygent/core/prompts/agents/middleware/template/: llm_tool_selector.py
tinygent/core/prompts/agents/template/: map_agent.py  multi_agent.py  react_agent.py  squad_agent.py
tinygent/core/prompts/cross_encoders/factory/: llm_cross_encoder.py
tinygent/core/prompts/cross_encoders/template/: llm_cross_encoder.py
tinygent/core/prompts/memory/template/: buffer_summary_chat_memory.py
tinygent/core/runtime/: executors.py  global_registry.py  middleware_catalog.py  tool_catalog.py
tinygent/core/telemetry/: utils.py
tinygent/core/types/: __init__.py  prompt_template.py
tinygent/cross_encoders/: llm_cross_encoder.py  register.py
tinygent/datamodels/: agent.py  agent_hooks.py  cross_encoder.py  embedder.py  llm.py  llm_io.py  llm_io_chunks.py  llm_io_input.py  llm_io_result.py  llm_result.py  memory.py  messages.py  prompt.py  tool.py  tool_info.py
tinygent/factory/: __init__.py  agent.py  cross_encoder.py  embedder.py  helper.py  llm.py  memory.py  middleware.py  tool.py
tinygent/llms/: __init__.py  base.py  openai.py  register.py  utils.py
tinygent/llms/converters/: openai.py
tinygent/memory/: __init__.py  base_chat_memory.py  buffer_chat_memory.py  buffer_summary_chat_memory.py  buffer_window_chat_memory.py  combined_memory.py  register.py
tinygent/prompts/agents/: react_agent.py  squad_agent.py
tinygent/prompts/agents/factory/: map_agent.py  multi_agent.py  react_agent.py  squad_agent.py
tinygent/prompts/agents/template/: map_agent.py  multi_agent.py  react_agent.py  squad_agent.py
tinygent/prompts/cross_encoders/: llm_cross_encoder.py
tinygent/prompts/cross_encoders/factory/: llm_cross_encoder.py
tinygent/prompts/cross_encoders/template/: llm_cross_encoder.py
tinygent/prompts/memory/factory/: buffer_summary_chat_memory.py
tinygent/prompts/memory/template/: buffer_summary_chat_memory.py
tinygent/runtime/: executors.py  global_registry.py  memory_group.py  tool_catalog.py  tool_converters.py
tinygent/telemetry/: otel.py  utils.py
tinygent/tools/: __init__.py  default_tools.py  jit_tool.py  reasoning_tool.py  register.py  tool.py
tinygent/types/: __init__.py  builder.py  prompt_template.py
tinygent/types/io/: llm_io_chunks.py  llm_io_result.py
tinygent/utils/: __init__.py  answer_validation.py  jinja_utils.py  load_file.py  normalizer.py  pydantic_utils.py  run_commands.py  schema_validator.py  yaml.py
