[project]
name = "tinygent"
version = "0.1.0"
description = "Tiny agentic framework for building AI agents which can do more than tiny just tasks."
authors = [{ name = "Filip Chytil" }]

license = "MIT"
readme = "README.md"
requires-python = "==3.12.*"

keywords = ["ai", "agents", "llm", "openai", "anthropic", "agentic", "framework"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "async-lru>=2.0.5",
    "jinja2>=3.1.6",
    "langchain-core>=0.3.74",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "typer>=0.19.2",
]

[project.urls]
Homepage = "https://github.com/filchy/tinygent"
Repository = "https://github.com/filchy/tinygent"
Issues = "https://github.com/filchy/tinygent/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]
brave = ["tiny-brave"]
anthropic = ["tiny-anthropic"]
openai = ["tiny-openai"]
mistralai = ["tiny-mistralai"]
gemini = ["tiny-gemini"]
chat = ["tiny-chat"]
graph = ["tiny-graph"]
voyageai = ["tiny-voyageai"]

[project.scripts]
tiny = "tinygent.cli.main:run_cli"
lint = "scripts.lint:main"
fmt = "scripts.fmt:main"
docs = "scripts.docs:main"

[project.entry-points.components]
tiny_agents = "tinygent.agents.register"
tiny_middlewares = "tinygent.agents.middleware.register"
tiny_tools = "tinygent.tools.register"
tiny_memory = "tinygent.memory.register"
tiny_crossencoders = "tinygent.cross_encoders.register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/*", "."]

[tool.uv.sources]
tiny-brave = { workspace = true }
tiny-anthropic = { workspace = true }
tiny-openai = { workspace = true }
tiny-mistralai = { workspace = true }
tiny-gemini = { workspace = true }
tiny-chat = { workspace = true }
tiny-graph = { workspace = true }
tiny-voyageai = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["tinygent"]
